engine/baml-lib/baml/tests/validation_files/expr/mdx_headers_complex_workflow.baml
// Complex expression function that calls LLM functions
function ProcessVideo(transcript: string, title: string?) -> string {
    # Main Processing Pipeline
    
    let computed_title = if !title {
        ## Generate Title
        GenerateTitle(transcript)
    } else {
        title
    };
    
    ## Generate Summary
    let summary = SummarizeVideo(transcript)
    
    ## Create Final Output
    computed_title + ": " + summary
}

// LLM helper functions
function GenerateTitle(transcript: string) -> string {
    client GPT4
    prompt #"Generate a title from: {{ transcript }}"#
}

function SummarizeVideo(transcript: string) -> string {
    client GPT4
    prompt #"Summarize: {{ transcript }}"#
}

client<llm> GPT4 {
    provider openai
    options {
        model gpt-4
        api_key env.OPENAI_API_KEY
    }
}

// error: Statement must end with a semicolon.
//   -->  expr/mdx_headers_complex_workflow.baml:5
//    | 
//  4 |     
//  5 |     let computed_title = if !title {
//    | 
